# mecab-text-cleaner

./: .all-contributorsrc  .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  hacktoberfest.yml  poetry-upgrade.yml
docs/: conf.py  index.md  installation.md  usage.md
src/mecab_text_cleaner/: __init__.py  _main.py  cli.py
tests/: test_main.py
