[tool.poetry]
name = "mecab-text-cleaner"
version = "0.1.0"
description = "Simple Python package for getting japanese reading (yomigana) using MeCab"
authors = ["34j <34j.95a2p@simplelogin.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/34j/mecab-text-cleaner"
documentation = "https://mecab-text-cleaner.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "mecab_text_cleaner", from = "src" },
]

[tool.poetry.scripts]
mecab-text-cleaner = "mecab_text_cleaner.cli:main"
mtc = "mecab_text_cleaner.cli:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/34j/mecab-text-cleaner/issues"
"Changelog" = "https://github.com/34j/mecab-text-cleaner/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8"
fugashi = {extras = ["unidic-lite"], version = "^1.3.0"}
attrs = "^23.1.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3"
pytest = "^7.0"
pytest-cov = "^3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-rtd-theme = ">=1.0"


[tool.poetry.group.unidecode.dependencies]
unidecode = "^1.3.6"

[tool.poetry.group.unidic]
optional = true

[tool.poetry.group.unidic.dependencies]
fugashi = {extras = ["unidic"], version = "^1.3.0"}

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variable = "src/mecab_text_cleaner/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "chore*",
    "ci*",
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=mecab_text_cleaner --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.isort]
profile = "black"
known_first_party = ["mecab_text_cleaner", "tests"]

[tool.autoflake]
expand_star_imports = true
remove_all_unused_imports = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
